<resources>
    <string name="app_name">On Price App</string>

    <string name="store">Mercados</string>
    <string name="store_description">
        Cadastre aqui o seu negócio de forma rápida, fácil e segura
    </string>

    <string name="search_product">Produtos</string>
    <string name="search_product_description">
        Encontre os melhores produtos nos
        melhores estabelecimentos
    </string>

    <string name="main_menu_help">Ajuda</string>

    <string name="userName">Nome de Usuário</string>
    <string name="password">Senha</string>
    <string name="cnpj">CNPJ</string>
    <string name="telephone">Telefone</string>
    <string name="street">Rua</string>
    <string name="number">N°</string>
    <string name="neighborhood">Bairro</string>
    <string name="city">Cidade</string>
    <string name="time">Horário</string>
    <string name="loginButton">Entrar</string>
    <string name="createAccount">Criar Conta</string>
    <string name="createProduct">Criar Produto</string>
    <string name="tab">-</string>
    <string name="stamp">Marca</string>

    <array name="uf">
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </array>

    <string name="product_name">Nome do Produto</string>
    <string name="price">R$ 0.00</string>
    <string name="qt">1</string>
    <string name="unity">Kg, L, Unidade...</string>

    <array name="category">
        <item>Laticíneos</item>
        <item>Higiene Pessoal</item>
        <item>Limpeza</item>
        <item>Legumes</item>
        <item>Verduras</item>
        <item>Frutas</item>
        <item>Carnes</item>
        <item>Não perecíveis</item>
        <item>Papelaria</item>
        <item>Bebidas</item>
    </array>

    <string name="save">Salvar</string>
    <string name="edit">Editar</string>
    <string name="delete">Excluir</string>
    <string name="open">Buscar</string>
    <string name="openImage">Selecionar Imagem</string>

    <string name="edit_account">Editar Dados</string>
    <string name="delete_account">Excluir Conta</string>

    <string name="txtCreateDescription">
        Para criar uma conta, o usuário, dono do estabelecimento, deve preencher o formulário
        com os dados solicitados.
    </string>

    <string name="txtCreateRedirect">
        Logo após, será redirecionado para realizar o login no On Price App.
    </string>

    <string name="txtLoginDescription">
        Insira os dados do estabelecimento (nome e senha) e clique no botão "Entrar" abaixo do
        formulário.
    </string>

    <string name="txtLoginRedirect">
        O usuário será redirecionado para o espaço do mercado, onde poderá gerenciar seus produtos.
    </string>

    <string name="txtCreateProductDescription">
        Preencha o formulário com os dados do produto. Lembre-se de preencher o campo de unidade,
        como Kg, Pacote, etc.
    </string>

    <string name="txtCreateProductRedirect">
        O produto aparecerá no espaço do mercado.
    </string>

    <string name="txtViewStoreDescription">
       Clique em produtos na tela inicial.
    </string>

    <string name="txtViewStoreRedirect">
        O usuário será redirecionado para uma tela com uma lista dos mercados cadastrados no On
        Price App.
    </string>

    <string name="txtViewProductDescription">
       Na listagem de estabelecimentos descrita no passo acima, clique no mercado desejado.
    </string>

    <string name="txtViewProductRedirect">
        O usuário será redirecionado para uma tela com uma lista dos produtos deste estabelecimento
        cadastrados no On Price App.
    </string>

    <string name="logout">Sair</string>

    <string name="noproducts2">Nenhum produto cadastrado</string>
    <string name="noproducts">Este estabelecimento não possui produtos cadastrados</string>
    <string name="nostore">Nenhum mercado cadastrado</string>

    <string name="error">Ocorreu um erro no carregamento dos dados</string>

</resources>
