<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".CreateAccountActivity">

    <ScrollView
        android:id="@+id/srollAccount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/createButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fieldsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/personImage"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/userName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_person_foreground" />

            <EditText
                android:id="@+id/nameField"
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="#e9e9e9"
                android:ems="10"
                android:hint="@string/userName"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/personImage"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/passwordImage"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personImage"
                app:srcCompat="@mipmap/ic_password_background" />

            <EditText
                android:id="@+id/passwordField"
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#e9e9e9"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintStart_toEndOf="@+id/passwordImage"
                app:layout_constraintTop_toBottomOf="@+id/nameField" />

            <ImageView
                android:id="@+id/shopImage"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/cnpj"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordImage"
                app:srcCompat="@mipmap/ic_shop_background" />

            <EditText
                android:id="@+id/cnpjField"
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="#e9e9e9"
                android:ems="10"
                android:hint="@string/cnpj"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/shopImage"
                app:layout_constraintTop_toBottomOf="@+id/passwordField" />

            <ImageView
                android:id="@+id/streetImage"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/street"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shopImage"
                app:srcCompat="@mipmap/ic_street_background" />

            <EditText
                android:id="@+id/streetField"
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="#e9e9e9"
                android:ems="10"
                android:hint="@string/street"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/streetImage"
                app:layout_constraintTop_toBottomOf="@+id/cnpjField" />

            <EditText
                android:id="@+id/numberField"
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="#e9e9e9"
                android:ems="10"
                android:hint="@string/number"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/streetField" />

            <EditText
                android:id="@+id/bairroField"
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="#e9e9e9"
                android:ems="10"
                android:hint="@string/neighborhood"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/numberField"
                app:layout_constraintTop_toBottomOf="@+id/streetField" />

            <ImageView
                android:id="@+id/cityImage"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberField"
                app:srcCompat="@mipmap/ic_city_background" />

            <EditText
                android:id="@+id/cityField"
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="#e9e9e9"
                android:ems="10"
                android:hint="@string/city"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/spinner"
                app:layout_constraintStart_toEndOf="@+id/cityImage"
                app:layout_constraintTop_toBottomOf="@+id/bairroField" />

            <Spinner
                android:id="@+id/spinner"
                style="@android:style/Widget.Material.Light.Spinner.Underlined"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:dropDownWidth="wrap_content"
                android:entries="@array/uf"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bairroField" />

            <EditText
                android:id="@+id/timeField"
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="#e9e9e9"
                android:ems="10"
                android:hint="@string/time"
                android:importantForAutofill="no"
                android:inputType="time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cityField" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/createButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>