<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemProductStoreLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/priceIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/price"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_price_background" />

            <TextView
                android:id="@+id/productStoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/priceIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/productStoreStamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/priceIcon"
                app:layout_constraintTop_toBottomOf="@+id/productStoreName" />

            <TextView
                android:id="@+id/tab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tab"
                app:layout_constraintStart_toEndOf="@+id/productStoreStamp"
                app:layout_constraintTop_toBottomOf="@+id/productStoreName" />

            <TextView
                android:id="@+id/productStorePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/tab1"
                app:layout_constraintTop_toBottomOf="@+id/productStoreName" />

            <TextView
                android:id="@+id/tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tab"
                app:layout_constraintStart_toEndOf="@+id/productStorePrice"
                app:layout_constraintTop_toBottomOf="@+id/productStoreName" />

            <TextView
                android:id="@+id/productStoreUnityQt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/tab2"
                app:layout_constraintTop_toBottomOf="@+id/productStoreName" />

            <ImageView
                android:id="@+id/trashBlackIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_trash_black_background" />

            <ImageView
                android:id="@+id/editBlackIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/trashBlackIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_edit_black_background" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>